<resources>
    <string name="app_name">ZS</string>
    <string name="okexit">Are you sure you want to quit ?</string>
    <string name="prompt">Tips</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>


    <!--新版登录专用-->
    <string name="login">Login</string>
    <string name="login_input_username_hint">User</string>
    <string name="hint_password">Key</string>
    <string name="login_hold_hint">Auto Login</string>
    <string name="login_register_hint">Registry</string>
    <string name="register_username_hint">UserName</string>
    <string name="plase_key">Please fill in the correct key</string>
    <string name="key_not_null">key cannot be empty</string>
    <string name="network_errer">Network connection failed</string>
    <string name="login_success">Login successfully</string>
    <string name="high">(High)</string>
    <string name="low">(Low)</string>
    <string name="moderate">(Moderate)</string>
    <string name="very_high">(Very high-Not recommended)</string>
    <string name="number">Number：</string>
    <string name="die">Die</string>
    <string name="app_info">Software for learning and reference only</string>
    <string name="app_info_a">Please uninstall and delete within 24 hours after installation</string>
    <string name="end_time">End time:</string>
    <string name="open_cheating">Open cheating</string>
    <string name="display_distance">Display distance</string>
    <string name="display_line">Display line</string>
    <string name="display_fps">Display FPS</string>
    <string name="horizontal_adjustment">Horizontal adjustment</string>
    <string name="vertical_adjustment">Vertical adjustment</string>
    <string name="close_all">Close all</string>
    <string name="time_expires">Time expires</string>
    <string name="permission">"You must give permission to continue using this software "</string>
    <string name="is_root">Please grant ROOT permission.</string>
    <string name="float_window">Please grant the floating window permission.</string>
    <string name="zm">Automatic aiming</string>
    <string name="gt">Jump higher</string>
    <string name="lf">Luffy</string>
    <string name="wh">No backseat</string>
    <string name="fw">Range</string>
    <string name="lj">Hosts interception</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="cheat">Cheat Engine</string>
    <string name="restore">Restore</string>
    <string name="cheat_errer">You can only use restore after opening the cheating engine</string>
</resources>
