<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical"
    android:background="@drawable/dialogs"
    android:minWidth="2600dip">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:layout_alignParentTop="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle"
            android:text="@string/okexit"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:id="@+id/dialogTextView1"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:id="@+id/dialogLinearLayoutch">

                <TextView
                    android:id="@+id/on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:id="@+id/dialogLinearLayoutok">

                <TextView
                    android:id="@+id/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:textSize="16sp"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>

