<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="210dp"
    android:layout_height="300dp"
    android:alpha="0.9"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageq"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/nfc" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contor"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/xfc"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/viptime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:textSize="12sp"
            android:textColor="#E91E63" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="210dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/open_cheating"
                            android:textColor="#E91E63" />

                        <Switch
                            android:id="@+id/swfk"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/display_distance"
                            android:textColor="#E91E63" />

                        <Switch
                            android:id="@+id/swm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/display_line"
                            android:textColor="#E91E63" />

                        <Switch
                            android:id="@+id/swline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/display_fps"
                            android:textColor="#E91E63" />

                        <Switch
                            android:id="@+id/swfps"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/horizontal_adjustment"
                                android:textColor="@color/textfiles" />

                        </LinearLayout>


                        <SeekBar
                            android:id="@+id/seekbar_nomal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:max="400"
                            android:maxHeight="2dp"
                            android:minHeight="2dp"
                            android:paddingLeft="12dp"
                            android:paddingTop="3dp"
                            android:paddingRight="12dp"
                            android:paddingBottom="3dp"
                            android:progress="200"
                            android:progressDrawable="@drawable/layer_progress"
                            android:thumb="@drawable/shape_circle" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/vertical_adjustment"
                                android:textColor="@color/textfiles" />

                        </LinearLayout>

                        <SeekBar
                            android:id="@+id/seekbar_nomab"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:max="400"
                            android:maxHeight="2dp"
                            android:minHeight="2dp"
                            android:paddingLeft="12dp"
                            android:paddingTop="3dp"
                            android:paddingRight="12dp"
                            android:paddingBottom="3dp"
                            android:progress="200"
                            android:progressDrawable="@drawable/layer_progress"
                            android:thumb="@drawable/shape_circle" />

                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="FPS:"
                                android:textColor="@color/textfiles" />

                            <TextView
                                android:id="@+id/tefps"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:text="@string/low"
                                android:textColor="@color/textfiles" />

                        </LinearLayout>


                        <SeekBar
                            android:id="@+id/seekbar_fps"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:max="100"
                            android:maxHeight="2dp"
                            android:minHeight="2dp"
                            android:paddingLeft="12dp"
                            android:paddingTop="3dp"
                            android:paddingRight="12dp"
                            android:paddingBottom="3dp"
                            android:progress="50"
                            android:progressDrawable="@drawable/layer_progress"
                            android:thumb="@drawable/shape_circle" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/wei"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/circle_corner_button_selector"
                        android:text="@string/close_all"
                        android:textColor="@color/textfiles"
                        android:textSize="@dimen/textsize" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>

